--- a/deploy/android/.travis.yml
+++ b/deploy/android/.travis.yml
@@ -1,14 +1,14 @@
 sudo: required
 language: go
 go:
-- 1.10.1
+- 1.11.1
 
 services:
 - docker
 
 install:
 - docker pull therecipe/qt:android
-- go get -u -v github.com/therecipe/qt/cmd/...
+- go get -v github.com/therecipe/qt/cmd/...
 
 script:
 - $GOPATH/bin/qtdeploy -docker build android
