--- a/deploy/windows/.travis.yml
+++ b/deploy/windows/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 language: go
 go:
-- 1.10.1
+- 1.11.1
 
 services:
 - docker
@@ -11,7 +11,7 @@ install:
 - docker pull therecipe/qt:windows_32_static
 - docker pull therecipe/qt:windows_64_shared
 - docker pull therecipe/qt:windows_64_static
-- go get -u -v github.com/therecipe/qt/cmd/...
+- go get -v github.com/therecipe/qt/cmd/...
 
 script:
 - $GOPATH/bin/qtdeploy -docker build windows_32_shared
