--- a/deploy/android/.travis.yml
+++ b/deploy/android/.travis.yml
@@ -8,7 +8,7 @@ services:
 
 install:
 - docker pull therecipe/qt:android
-- go get -v github.com/therecipe/qt/cmd/...
+- go get -v -tags=no_env github.com/therecipe/qt/cmd/...
 
 script:
 - $GOPATH/bin/qtdeploy -docker build android
