--- a/deploy/linux/.travis.yml
+++ b/deploy/linux/.travis.yml
@@ -11,7 +11,7 @@ install:
 - docker pull therecipe/qt:rpi1
 - docker pull therecipe/qt:rpi2
 - docker pull therecipe/qt:rpi3
-- go get -v github.com/therecipe/qt/cmd/...
+- go get -v -tags=no_env github.com/therecipe/qt/cmd/...
 
 script:
 - $GOPATH/bin/qtdeploy -docker build linux
