--- a/deploy/sailfish/.travis.yml
+++ b/deploy/sailfish/.travis.yml
@@ -11,7 +11,7 @@ install:
 - docker pull therecipe/qt:ubports_64_vivid
 - docker pull therecipe/qt:ubports_arm_xenial
 - docker pull therecipe/qt:ubports_64_xenial
-- go get -v github.com/therecipe/qt/cmd/...
+- go get -v -tags=no_env github.com/therecipe/qt/cmd/...
 
 script:
 - $GOPATH/bin/qtdeploy -docker build ubports_arm_vivid
